# MIPT-networked

./: .gitignore  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json
w1/: client.cpp  client.h  makefile  server.cpp  server.h  socket_tools.h
w10/: Makefile  cmake_install.cmake
w2/: CMakeCache.txt  CMakeLists.txt  Client.cpp  Client.h  GameServer.cpp  GameServer.h  LobbyServer.cpp  LobbyServer.h  Makefile  client  cmake_install.cmake  compile_commands.json  game_server  lobby_server
w4/: CMakeLists.txt  Makefile  bitstream.h  client.cpp  client.h  cmake_install.cmake  entity.h  protocol.cpp  protocol.h  server.cpp  server.h  w4  w4_server
w5/: Makefile  cmake_install.cmake  entity.h  main.cpp  protocol.cpp  protocol.h  server.cpp  w5  w5_server
w7/: CMakeLists.txt  Makefile  cmake_install.cmake  entity.cpp  main.cpp  protocol.cpp  protocol.h  server.cpp  w7  w7_server
